--- a/app/src/main/res/layout/fragment_authentication.xml
+++ b/app/src/main/res/layout/fragment_authentication.xml
@@ -19,21 +19,13 @@
             android:layout_height="match_parent"
             android:paddingBottom="30dp">
 
-            <include
-                android:id="@+id/search_layout"
-                layout="@layout/search_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="50dp"
-                app:layout_constraintTop_toTopOf="parent"/>
-
             <LinearLayout
                 android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dp_10"
                 android:layout_marginRight="@dimen/dp_10"
-                android:layout_marginTop="55dp"
+                android:layout_marginTop="85dp"
                 android:background="@drawable/shape_corner_white_background_no_stroke"
                 android:divider="@drawable/divider_gray_1_height"
                 android:orientation="vertical"
@@ -41,7 +33,7 @@
                 android:showDividers="middle"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/search_layout">
+                app:layout_constraintTop_toBottomOf="parent">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -301,10 +293,10 @@
                 android:layout_alignParentLeft="true"
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="50dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/search_layout"
+                app:layout_constraintTop_toBottomOf="parent"
                 app:srcCompat="@drawable/vector_ic_user_default" />
 
         </android.support.constraint.ConstraintLayout>
